--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniela <dancar.528@gmail.com> (https://twitter/dcardoh)",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+  	"yargs": "^13.2.4"
+  }
 }
